<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#575757"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/botaoDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="18dp"
        android:background="#FFFFFF"
        android:text="@string/divisao"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botao7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botao9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="17dp"
        android:background="#FFFFFF"
        android:text="@string/numero9"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botao6"
        app:layout_constraintEnd_toStartOf="@+id/botaoResultado"
        app:layout_constraintStart_toEndOf="@+id/botao8" />

    <Button
        android:id="@+id/botao6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="21dp"
        android:background="#FFFFFF"
        android:text="@string/numero6"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botao3"
        app:layout_constraintEnd_toStartOf="@+id/botaoResultado"
        app:layout_constraintStart_toEndOf="@+id/botao5" />

    <Button
        android:id="@+id/botao8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="17dp"
        android:background="#FFFFFF"
        android:text="@string/numero8"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botao5"
        app:layout_constraintStart_toEndOf="@+id/botao7" />

    <Button
        android:id="@+id/botao0"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="94dp"
        android:background="#FFFFFF"
        android:text="@string/numero0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botao5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="21dp"
        android:background="#FFFFFF"
        android:text="@string/numero5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botao2"
        app:layout_constraintStart_toEndOf="@+id/botao4" />

    <Button
        android:id="@+id/botaoSubtrair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="18dp"
        android:background="#FFFFFF"
        android:text="@string/subtracao"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botao9"
        app:layout_constraintStart_toEndOf="@+id/botaoMultiplicar"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/botao2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="18dp"
        android:background="#FFFFFF"
        android:text="@string/numero2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botao0"
        app:layout_constraintStart_toEndOf="@+id/botao1" />

    <Button
        android:id="@+id/botaoApagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="94dp"
        android:background="#FFFFFF"
        android:text="@string/apagar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botaoPonto" />

    <Button
        android:id="@+id/botao3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="18dp"
        android:background="#FFFFFF"
        android:text="@string/numero3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botaoPonto"
        app:layout_constraintEnd_toStartOf="@+id/botaoResultado"
        app:layout_constraintStart_toEndOf="@+id/botao2" />

    <Button
        android:id="@+id/botao1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="18dp"
        android:background="#FFFFFF"
        android:text="@string/numero1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botao0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/botao4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="21dp"
        android:background="#FFFFFF"
        android:text="@string/numero4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botao1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botaoAdicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="18dp"
        android:background="#FFFFFF"
        android:text="@string/somar"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botaoResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botaoSubtrair" />

    <Button
        android:id="@+id/botaoResultado"
        android:layout_width="89dp"
        android:layout_height="183dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="17dp"
        android:background="#FFFFFF"
        android:text="@string/resultado"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botaoApagar"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/botaoMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="18dp"
        android:background="#FFFFFF"
        android:text="@string/multiplicacao"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botao8"
        app:layout_constraintStart_toEndOf="@+id/botaoDividir" />

    <Button
        android:id="@+id/botaoPonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="94dp"
        android:background="#FFFFFF"
        android:text="@string/ponto"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botao0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/botao7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="17dp"
        android:background="#FFFFFF"
        android:text="@string/numero7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botao4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/campoTexto"
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="564dp"
        android:background="#FFFFFF"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>